[project]
name = "test-flow-rms"
version = "0.1.0"
description = "Reconciliation Management System (RMS) - FastAPI + GraphQL + SQLAlchemy"
authors = [
    {name = "Seba Espinosa",email = "sebaespinosa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    
    # Data Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # GraphQL
    "strawberry-graphql[fastapi]>=0.218.0",
    
    # Logging
    "loguru>=0.7.0",

    # Utilities
    "asgi-correlation-id>=1.3.0",
    "python-dotenv>=1.0.0",
    "google-genai (>=0.1.0,<1.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "W", "C90", "I", "N", "D"]
ignore = ["E501", "D104", "D100"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
faker = "^40.1.2"
black = "^26.1.0"
ruff = "^0.14.13"
mypy = "^1.19.1"
pre-commit = "^4.5.1"
deptry = "^0.24.0"
httpx = "^0.27.2"

